--- a/Backend/EcommerceInventory/.env
+++ b/Backend/EcommerceInventory/.env
@@ -12,7 +12,15 @@ DATABASE_PASSWORD='ecommerce'
 DATABASE_HOST='ecommerce.cgto4oecwsqh.us-east-1.rds.amazonaws.com'
 DATABASE_PORT='3306'
 
-AWS_ACCESS_KEY_ID='ACCESS_KEY_ID'
-AWS_ACESS_KEY_SECRET='AWS_ACESS_KEY_SECRET'
-AWS_STORAGE_BUCKET_NAME='AWS_BUCKET_NAME'
-AWS_S3_REGION_NAME='AWS_S3_REGION_NAME'
+# AWS_ACCESS_KEY_ID='ACCESS_KEY_ID'
+# AWS_ACESS_KEY_SECRET='AWS_ACESS_KEY_SECRET'
+# AWS_STORAGE_BUCKET_NAME='AWS_BUCKET_NAME'
+# AWS_S3_REGION_NAME='AWS_S3_REGION_NAME'
+
+AWS_ACCESS_KEY_ID='AKIA32TNMPGCHSH5MHVL'
+AWS_ACESS_KEY_SECRET='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'
+AWS_STORAGE_BUCKET_NAME='ecommerce-backend20062025'
+AWS_S3_REGION_NAME='Asia Pacific (Mumbai) ap-south-1'
+
+
+
