--- a/Backend/EcommerceInventory/.env
+++ b/Backend/EcommerceInventory/.env
@@ -5,12 +5,12 @@ DEBUG='True'
 # DATABASE_PASSWORD='ecommerce'
 # DATABASE_HOST='ecommerce.cfamkce00xa3.ap-south-1.rds.amazonaws.com'
 # DATABASE_PORT='3306'
-SECRET_KEY='django-insecure-n==@#u@5goj0o27k8isfo%6!k3fs(2u@3r7+n!ovu-uu1#p=gd'
-DATABASE_NAME='ecommerce'
-DATABASE_USER='ecommerce'
-DATABASE_PASSWORD='ecommerce'
-DATABASE_HOST='ecommerce.cgto4oecwsqh.us-east-1.rds.amazonaws.com'
-DATABASE_PORT='3306'
+#SECRET_KEY='django-insecure-n==@#u@5goj0o27k8isfo%6!k3fs(2u@3r7+n!ovu-uu1#p=gd'
+#DATABASE_NAME='ecommerce'
+#DATABASE_USER='ecommerce'
+#DATABASE_PASSWORD='ecommerce'
+#DATABASE_HOST='ecommerce.cgto4oecwsqh.us-east-1.rds.amazonaws.com'
+#DATABASE_PORT='3306'
 
 AWS_ACCESS_KEY_ID='ACCESS_KEY_ID'
 AWS_ACESS_KEY_SECRET='AWS_ACESS_KEY_SECRET'
